--- a/css/slyles.css
+++ b/css/slyles.css
@@ -13,6 +13,63 @@
   --modal-background: #fcfcfc;
 }
 
+/* скидання стилів */
+h1, h2, h3, h4, h5, h6, p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ul {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+  list-style-type: none;
+}
+
+.container {
+  width: 1158px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  outline: 5px solid tomato;
+  /*outline-offset: 20px;*/
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+/*styles*/
+/*
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav {
+  display: flex;
+  align-items: center;
+*/
+
+.section {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.portfolio-section {
+  padding-bottom: 60px;
+}
+
+.hero-section {
+  padding-bottom: 120px;
+}
+
+.hero-container {
+
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   line-height: 24px;
@@ -84,6 +141,10 @@ body {
   background-color: var(--dark-color);
 }
 .hero .main-title {
+  width: 496px;
+  margin: 0 auto;
+  padding-top: 212px;
+  margin-bottom: 48px;
   color: var(--white-background);
   font-size: 56px;
   font-weight: 700;
@@ -100,6 +161,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.04em;
   cursor: pointer;
+  padding: 16px 32px;
 }
 .button-hero:hover ,
 .button-hero:focus {
@@ -152,6 +214,7 @@ body {
   list-style-type: none;
 }
 .benefits .subtitle {
+  margin-bottom: 8px;
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
@@ -164,6 +227,12 @@ body {
   color: var(--text-color);
 }
 /*section 2*/
+.section-title {
+  margin: 0 auto;
+  margin-bottom: 72px;
+  width: 323px;
+}
+
 .actions .actions-list {
   list-style-type: none;
 }
@@ -177,6 +246,7 @@ body {
   text-align: center;
 }
 .team-block .title-text {
+  padding-top: 120px;
   font-size: 36px;
   font-weight: 700;
   line-height: 1.11;
@@ -193,6 +263,8 @@ body {
   background-color: var(--white-background);
 }
 .team-block .subtitle {
+  margin-top: 32px;
+  margin-bottom: 8px;
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
@@ -213,6 +285,7 @@ body {
   background-color: var(--dark-color);
 }
 .footer .logo {
+  margin-bottom: 17.5px;
   font-family: "Raleway", sans-serif;
   font-size: 18px;
   font-weight: 800;
@@ -228,4 +301,19 @@ body {
   color: var(--light-color);
   line-height: 1.5;
   letter-spacing: 0.02em;
+}
+
+
+
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
 }
