--- a/css/slyles.css
+++ b/css/slyles.css
@@ -37,6 +37,7 @@ ul {
   margin: auto;
   /*outline: 5px solid tomato;
   /*outline-offset: 20px;*/
+  padding: 0 15px;
 }
 
 img {
@@ -49,10 +50,12 @@ button {
   display: block;
 }
 
+.header {
+    border-bottom: 1px solid #e7e9fc;
+}
 .header-container {
   display: flex;
-  justify-content: space-between;  
-  border-bottom: 1px solid #e7e9fc;
+  justify-content: space-between; 
 }
 
 .nav {
@@ -99,6 +102,9 @@ body {
   color: var(--text-color);
 }
 
+.header .logo {
+  margin-right: 76px;
+}
 .logo {
   font-family: 'Raleway', sans-serif;
   text-transform: uppercase;
@@ -117,6 +123,8 @@ body {
 
 .page-navigation {
   list-style-type: none;
+  display: flex;
+  gap: 40px;
 }
 .page-navigation .link {
   font-weight: 500;
@@ -151,6 +159,11 @@ body {
 .address-block .link:active ,
 .address-block .link:focus {
   color: var(--pressed-state);
+}
+
+.address-block .list {
+  display: flex;
+  gap: 40px;
 }
 .list {
   list-style: none;
@@ -243,6 +256,10 @@ body {
 }
 
 /*section 1*/
+.benefits {
+  padding: 120px 0;
+}
+
 .benefits .benefits-list {
   list-style-type: none;
   display: flex;
@@ -307,6 +324,7 @@ body {
 }
 .team-block {
   background-color: var(--light-color);
+  padding: 120px 0;
 }
 .team-block .team-list {
   list-style-type: none;
@@ -322,15 +340,22 @@ body {
   line-height: 1.2;
   letter-spacing: 0.4px;
   color: var(--hero-background);
+  
+  text-align: center;
 }
 .team-block .index-text {
   line-height: 1.5;
   letter-spacing: 0.32px;
   color: var(--text-color);
+  text-align: center;
 }
 .team-block .picture {
   background-color: var(--white-background);
-  width: calc((100% - 48px) / 4)
+  width: calc((100% - 48px) / 4);
+  border-radius: 0px 0px 4px 4px;
+}
+.team-name-content {
+  padding: 32px;
 }
 
 /*footer*/
