--- a/css/slyles.css
+++ b/css/slyles.css
@@ -104,6 +104,7 @@ body {
 
 .header .logo {
   margin-right: 76px;
+  padding: 24px 0;
 }
 .logo {
   font-family: 'Raleway', sans-serif;
@@ -279,10 +280,14 @@ body {
 .list-img-portfolio {
   width: calc((100% - 48px) / 3)
 }
+.list-img-portfolio .link {
+  padding: 24px 0;
+}
 
 .portfolio-content {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
+  border-top: none;
 }
 
 
@@ -387,7 +392,7 @@ body {
   border-radius: 0px 0px 4px 4px;
 }
 .team-name-content {
-  padding: 32px;
+  padding: 32px 0;
 }
 
 /*footer*/
@@ -420,17 +425,16 @@ body {
 /* visual hidden */
 .visually-hidden {
   position: absolute;
-  white-space: nowrap;
   width: 1px;
   height: 1px;
-  overflow: hidden;
+  margin: -1px;
   border: 0;
   padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
   clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  margin: -1px;
+  overflow: hidden;
 }
-
 
 
 
