--- a/css/slyles.css
+++ b/css/slyles.css
@@ -133,6 +133,8 @@ body {
   letter-spacing: 0.32px;
   text-decoration: none;
   color: var(--dark-color);
+
+  padding: 24px 0;
 }
 .page-navigation .link:hover {
   color: var(--pressed-state);
